# MCP-Learnings

./: .env  main.py  pyproject.toml
MCP_notes/: All_types_of_MCP_servers.txt  Connectors_in_MCP.txt  Data_layer_of_MCP.txt  FastMCP_or_MCP_SDK.txt  MCP_lifecycle.txt  MCP_transport_layer.txt  about_MCP.txt  about_context.txt  about_mcp_primitives.txt
app/1_First_mcp_server_using_fastmcp/: first_mcp_server.py
app/2_Expense_tracker_mini_project_fastmcp/: expense_tracker.py  expenses.db
app/4_Mcp_math_server_own_Mcp_client/: client1.py  server.py
app/Elicitation_in_mcp/: elicitation_1.py
app/Mcp_client/: client1.py  server.py
app/Structured_output_in_mcp/: client1.py  structured_output1.py
app/Tool_transformation/: transform_tool_1.py
app/mcp_with_gemini/: gemini_mcp_client.py  server.py
app/proxy_server/: first_proxy_server.py  server.py  tool_use.py
app/routes_in_mcp/: first_route.py  post_route.py
app/sampling_in_mcp/: sampling1.py
